<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020. Explore in HMS. All rights reserved.
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~
  -->

<resources xmlns:tools="http://schemas.android.com/tools">

    <!--General-String-Resources-->
    <string name="app_name">Huawei Lens</string>
    <string name="package_name">com.hms.referenceapp.huaweilens</string>
    <string name="settings">Settings</string>
    <string name="cancel" tools:ignore="ButtonCase">Cancel</string>
    <string name="abort">Abort</string>
    <string name="please_wait">Please Wait…</string>
    <string name="download_pack">Download Language Pack</string>
    <string name="download_language_pack">Download Language Package</string>
    <string name="download_language_pack_downloaded">%1$s language pack is being downloaded.</string>
    <string name="download_language_pack_request">Do you want to download this language pack?</string>
    <string name="toast_downloaded">%1$s language pack is being downloaded.</string>
    <string name="toast_deleted">%1$s language pack is deleted.</string>
    <string name="delete_language_pack"> Do you want to delete this language pack?</string>
    <string name="language_pack_downloaded">%1$s language pack is downloaded.</string>
    <string name="uploading">Uploading…</string>
    <string name="str_original">Original</string>
    <string name="processing">Processing…</string>
    <string name="translating">Translating…</string>
    <string name="choose_file">Choose File</string>
    <string name="loading">Image is processing…</string>
    <string name="try_again">Try Again</string>
    <string name="download">Download</string>
    <string name="dismiss">Dismiss</string>
    <string name="file_share_message">Hey There\n\n\Please check this file out.\n\n\</string>
    <string name="import_file_message">Select a File to Import</string>
    <string name="permission_required">Permissions Required</string>
    <string name="check_permissions">Check Permissions</string>
    <string name="created_time">Created at:</string>
    <string name="next">NEXT</string>
    <string name="touch_here_to_turn_light_on">Touch here to turn light on</string>
    <string name="touch_here_to_turn_light_off">Touch here to turn light off</string>

    <!--Image-Processing-Related-->
    <string name="bottom_menu_image_view">bottom_menu_image_view</string>
    <string name="feature_image">feature_image</string>
    <string name="select_from_album">Select image from album</string>
    <string name="video_frame">Video stream</string>
    <string name="take_photo">Take Photo</string>
    <string name="simplified_chinese">Simplified chinese</string>
    <string name="english_choose">English</string>
    <string name="japanese_choose">Japanese</string>
    <string name="korean_choose">Korean</string>
    <string name="latin_choose">Latin</string>
    <string name="get_data_failed">Failed to get data.</string>
    <string name="image_preview">Image Preview</string>
    <string name="cancel_button">cancel button</string>
    <string name="apply_button">apply button</string>

    <!--Document Skew -->
    <string name="hint"> Please enter your file name without extension (.pdf,.txt etc)</string>
    <string name="crop_image_activity_title" />
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="pick_image_intent_chooser_title">Select source</string>

    <!--Audio-Transcription-->
    <string name="at_real_time">Real Time</string>
    <string name="at_from_file">From File</string>
    <string name="at_player_placeholder">Please Record Real Time Voice or Choose an Audio File to Process.</string>
    <string name="at_player_zero_time">00:00</string>
    <string name="at_transcription_result">Transcription Result:</string>
    <string name="aft_record_audio">Record Audio</string>
    <string name="at_rewind">Rewind</string>
    <string name="at_play_or_pause">Play or Pause</string>
    <string name="at_forward">Forward</string>
    <string name="at_still_recording">Huawei Lens is still recording.</string>
    <string name="file_transcription_result">Huawei Lens Audio Transcription Result</string>
    <string name="open_internet_connection">Please open internet connection to download the language pack</string>

    <!--Text-to-Speech-->
    <string name="speaker_selection">Speaker Selection</string>
    <string name="enter_your_text">Type something or import a file.</string>
    <string name="tts_volume">Volume</string>
    <string name="tts_speed">Speed</string>
    <string name="play">play</string>
    <string name="tts_male">Male</string>
    <string name="tts_female">Female</string>
    <string name="tts_speak_out">Speak Out</string>
    <string name="powered_by_huawei">FROM HUAWEI</string>
    <string name="clear_text">Clear</string>
    <string name="save_txt_file">Save text to Text file</string>
    <string name="save_text_to_word_document">Save text to Word file</string>
    <string name="save_image_to_word_document">Save Image to Word file</string>
    <string name="save_text_to_pdf_document">Save text to Pdf file</string>
    <string name="save_image_to_pdf_document">Save image to pdf file</string>
    <string name="save_image_to_gallery">Save image to gallery</string>
    <string name="your_speaker">Your document is English. Please select a speaker.</string>
    <string name="your_speaker_chinese">Your document is Chinese. Please select a speaker.</string>
    <string name="select_speaker">Please select a speaker</string>
    <string name="title_activity_qr">QrActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="there_were_no_results_please_try_again">There were no results. Please try again</string>
    <string name="about">about</string>
    <string name="ok">OK</string>
    <string name="trtLightOn">Touch here to turn light on</string>
    <string name="trtLightOff">Touch here to turn light off</string>
    <string name="app_name_uc">HUAWEI LENS</string>
    <string name="title_activity_introduction">IntroductionActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>


</resources>
